jion0403_오류파일__18시 07분 59초.txt
buffers_g ['', '', '', '', '']
[설정] 저장된 설정 적용 완료
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] 음성캡차 엔진 이미 설치됨
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 17880)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID jion0403
realPW love4399!!
로그인 성공
모드4
[로그 초기화 완료] C:\Users\admin\Downloads\OneDrive_2026-04-21 (2)\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
57
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 1
57
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 2
57
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
크롬드라이버 강제 종료 성공
시작
File saved to: C:\Users\admin\Downloads\OneDrive_2026-04-21 (2)\logfile.txt

--- Captured Logs ---
buffers_g ['', '', '', '', '']
[설정] 저장된 설정 적용 완료
[캡차 로컬설치] 체크 상태: 1
[LOCAL STT] 음성캡차 엔진 이미 설치됨
[LOCAL STT] 워커 파일 존재: True, 크기: 3172
[LOCAL STT] 워커 파일 읽기 테스트: stdout=, stderr=Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "<string>", line 2
    import sys, json, os, subprocess, tempfile, uuid,
                                                     ^
SyntaxError: invalid syntax, code=1
[LOCAL STT] Python-STT 경로: C:\Python-STT\python.exe
[LOCAL STT] Python 테스트 stdout: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]
ok
[LOCAL STT] Python 테스트 stderr: 
[LOCAL STT] Python 테스트 코드: 0
[LOCAL STT] 워커 직접 실행: 10초 초과 (정상 - 모델 로딩 중)
[LOCAL STT] 서브프로세스 시작 (PID: 17880)
[LOCAL STT] 상태: {'status': 'ready'}
시작
realID jion0403
realPW love4399!!
로그인 성공
모드4
[로그 초기화 완료] C:\Users\admin\Downloads\OneDrive_2026-04-21 (2)\page_info_log.txt
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 0
57
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 1
57
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
모든 Chrome 프로세스를 종료했습니다.
--------mode4 전체 error-------------import --------
에러메세지
[Errno 2] No such file or directory: '프록시유동_하이아이피.txt'
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
loop_oper 2
57
----------------------------------------
----------------------------------------
----------------------------------------
----------------------------------------
크롬드라이버 강제 종료 성공
시작
File saved to: C:\Users\admin\Downloads\OneDrive_2026-04-21 (2)\logfile.txt

시작
File saved to: C:\Users\admin\Downloads\OneDrive_2026-04-21 (2)\logfile.txt